mousetrap and preventable system refactor

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -368,6 +368,8 @@
   - type: GroupExamine
   - type: ProtectedFromStepTriggers
     slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
 
 - type: entity
   parent: ClothingOuterArmorHeavy
@@ -440,6 +442,8 @@
   - type: GroupExamine
   - type: ProtectedFromStepTriggers
     slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
 
 - type: entity
   parent: [ ClothingOuterBaseLarge, BaseMajorContraband, AllowSuitStorageClothing ]
@@ -469,6 +473,8 @@
     node: armor
   - type: ProtectedFromStepTriggers
     slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
 
 - type: entity
   parent: [ ClothingOuterBaseLarge, BaseMajorContraband, AllowSuitStorageClothing ]
@@ -489,5 +495,7 @@
         Heat: 0.5
   - type: GroupExamine
   - type: ProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
     slots: WITHOUT_POCKET
 
