--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/suits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/suits.yml
@@ -27,6 +27,8 @@
     - WhitelistChameleon
   - type: ProtectedFromStepTriggers
     slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
 
 - type: entity
   parent: ClothingOuterSuitBomb
@@ -70,6 +72,8 @@
   - type: GroupExamine
   - type: ProtectedFromStepTriggers
     slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
 
 - type: entity
   parent: [ClothingOuterBaseLarge, AllowSuitStorageClothing]
@@ -102,6 +106,8 @@
   - type: GroupExamine
   - type: ProtectedFromStepTriggers
     slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
   - type: Tag
     tags:
     - CorgiWearable
@@ -130,6 +136,8 @@
     containers:
       toggleable-clothing: !type:ContainerSlot {}
   - type: ProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
     slots: WITHOUT_POCKET
 
 - type: entity
@@ -208,6 +216,8 @@
     sprite: Clothing/OuterClothing/Suits/chicken.rsi
   - type: ProtectedFromStepTriggers
     slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
 
 - type: entity
   parent: ClothingOuterBase
@@ -246,6 +256,8 @@
       toggleable-clothing: !type:ContainerSlot {}
   - type: ProtectedFromStepTriggers
     slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
 
 - type: entity
   parent: ClothingOuterBase
@@ -268,6 +280,8 @@
     graph: ClothingOuterSuitIan
     node: suit
   - type: ProtectedFromStepTriggers
+    slots: WITHOUT_POCKET
+  - type: TriggerProtectedFromStepTriggers
     slots: WITHOUT_POCKET
   - type: Tag
     tags:
